--- a/Entity/Entity.csproj
+++ b/Entity/Entity.csproj
@@ -4,15 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{771AA5B7-D9F8-47BF-B897-DCEBCA6C1D34}</ProjectGuid>
+    <ProjectGuid>{B514D50C-83CE-4750-A37C-9745DF2D1BC1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Models</RootNamespace>
-    <AssemblyName>Models</AssemblyName>
+    <RootNamespace>Entity</RootNamespace>
+    <AssemblyName>Entity</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -43,26 +42,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
-    <Compile Include="ModelPersona.cs" />
+    <Compile Include="EntityAgrupacion.cs" />
+    <Compile Include="EntityDireccion.cs" />
+    <Compile Include="EntityDireccionCatastro.cs" />
+    <Compile Include="EntityPersona.cs" />
+    <Compile Include="EntityPredio.cs" />
+    <Compile Include="EntitySectorCatastral.cs" />
+    <Compile Include="EntityTipoAgrupacion.cs" />
+    <Compile Include="EntityTipoContacto.cs" />
+    <Compile Include="EntityTipoDocumento.cs" />
+    <Compile Include="EntityTipoNumeracion.cs" />
+    <Compile Include="EntityUbigeo.cs" />
+    <Compile Include="EntityVias.cs" />
+    <Compile Include="EntityViasParqueo.cs" />
+    <Compile Include="EntityViasTipo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <DependentUpon>Settings.settings</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Entity\Entity.csproj">
-      <Project>{b514d50c-83ce-4750-a37c-9745df2d1bc1}</Project>
-      <Name>Entity</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
