--- a/Models/app.config
+++ b/Models/app.config
@@ -1,9 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Models.Properties.Settings.cn" connectionString="Data Source=G-TI-03\LOCAL;Initial Catalog=SATMUNXP;User ID=sa;Password=Server4316"
-            providerName="System.Data.SqlClient" />
+        <add name="Models.Properties.Settings.cn" connectionString="Data Source=G-TI-03\LOCAL;Initial Catalog=SATMUNXP;User ID=sa;Password=Server4316" providerName="System.Data.SqlClient"/>
     </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/></startup></configuration>
