--- a/Views/Views.csproj
+++ b/Views/Views.csproj
@@ -33,8 +33,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,6 +47,9 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationProvider" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Form1.cs">
@@ -70,6 +76,24 @@
     <Compile Include="frmMDIMain.Designer.cs">
       <DependentUpon>frmMDIMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmlistadoPersona.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmlistadoPersona.Designer.cs">
+      <DependentUpon>frmlistadoPersona.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmModal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmModal.Designer.cs">
+      <DependentUpon>frmModal.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmRegistrarDireccionNueva.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmRegistrarDireccionNueva.Designer.cs">
+      <DependentUpon>frmRegistrarDireccionNueva.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +110,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmDiseñoWindowsModales.resx">
       <DependentUpon>frmDiseñoWindowsModales.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmlistadoPersona.resx">
+      <DependentUpon>frmlistadoPersona.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmModal.resx">
+      <DependentUpon>frmModal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmRegistrarDireccionNueva.resx">
+      <DependentUpon>frmRegistrarDireccionNueva.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmUsuario.resx">
       <DependentUpon>frmUsuario.cs</DependentUpon>
